--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,10 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from math import sqrt\n",
     "# Variables\n",
     "\n",
     "points = [(4, 5), (-0, 2), (4, 7), (1, -3), (3, -2), (4, 5),\n",
@@ -57,43 +58,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
+    "\n",
+    "points=set(points)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1= [(4, 7), (3, 2), (4, 5), (5, 7), (9, 9), (2, 2), (0, 2)]\n",
+      "Q2= [(3, -2), (0, -2), (1, -3)]\n",
+      "Q3= [(-4, 5), (-1, 3), (-5, 7), (-3, 2), (-4, 7)]\n",
+      "Q4= [(-4, -5), (-8, -9)]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "\n",
+    "Q1=[]; Q2=[]; Q3=[]; Q4=[]; closest_points=[]; arrows_list=[]\n",
+    "for point in points:\n",
+    "    if point[0]>=0 and point[1]>=0:        \n",
+    "        Q1.append(point)\n",
+    "    elif point[0]>=0 and point[1]<0:\n",
+    "        Q2.append(point)\n",
+    "    elif point[0]<0 and point[1]>=0:\n",
+    "        Q3.append(point)\n",
+    "    else:\n",
+    "        Q4.append(point)        \n",
+    "    \n",
+    "print(\"Q1=\",Q1)\n",
+    "print(\"Q2=\",Q2)\n",
+    "print(\"Q3=\",Q3)\n",
+    "print(\"Q4=\",Q4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "[(0, -2), (0, 2)]\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
     "# Defining a function that calculates the distance to the center can help.\n",
-    "\n"
+    "\n",
+    "def distance(a,b):\n",
+    "    return sqrt(a**2+b**2)\n",
+    "    \n",
+    "points_distance={}\n",
+    "for point in points:\n",
+    "    dist=distance(point[0],point[1])\n",
+    "    points_distance[point]= dist\n",
+    "    \n",
+    "distance_minimum= min(points_distance.values())\n",
+    "print(distance_minimum)\n",
+    "\n",
+    "for point in points :\n",
+    "    if points_distance[point] == distance_minimum:\n",
+    "        closest_points.append(point)\n",
+    "print(closest_points)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
+    "for point in points :\n",
+    "    if points_distance[point] > 9:\n",
+    "        arrows_list.append(point)\n",
+    "number_arrows= len(arrows_list)\n",
+    "print( number_arrows)\n",
     "\n"
    ]
   },
@@ -121,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
