--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -27,46 +27,112 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please choose one of the following: 'stone', 'paper' or 'scissors' paper\n",
+      "Robot choice paper\n",
+      "Draw!\n",
+      "Please choose one of the following: 'stone', 'paper' or 'scissors' papa\n",
+      "You've made a mistake, please choose within: 'stone', 'paper' or 'scissors' stone\n",
+      "Robot choice scissors\n",
+      "You won !\n",
+      "Please choose one of the following: 'stone', 'paper' or 'scissors' scissors\n",
+      "Robot choice paper\n",
+      "You won !\n",
+      "Please choose one of the following: 'stone', 'paper' or 'scissors' paper\n",
+      "Robot choice paper\n",
+      "Draw!\n",
+      "Please choose one of the following: 'stone', 'paper' or 'scissors' papa\n",
+      "You've made a mistake, please choose within: 'stone', 'paper' or 'scissors' stone\n",
+      "Robot choice paper\n",
+      "Robot won !\n",
+      "Human is the winner !\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
+    "from random import choice\n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
+    "options=['stone', 'paper','scissors']\n",
+    "\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "max_games=5\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
+    "number_games=max_games//2+1\n",
     "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
+    "def robot_play():\n",
+    "    return choice(options)\n",
     "\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
+    "def human_play():\n",
+    "    a=input(\"Please choose one of the following: 'stone', 'paper' or 'scissors' \")\n",
+    "    while a not in options:\n",
+    "        a=input(\"You've made a mistake, please choose within: 'stone', 'paper' or 'scissors' \")\n",
+    "    return a \n",
+    "\n",
     "\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
-    "\n",
+    "def combat (robot_choice,human_choice):\n",
+    "    win_play={'paper':'stone', 'stone':'scissors','scissors':'paper'}\n",
+    "    print(\"Robot choice\", robot_choice)\n",
+    "    if win_play[robot_choice]==human_choice:\n",
+    "        print(\"Robot won !\")\n",
+    "        return 1   \n",
+    "    \n",
+    "    elif win_play[human_choice]==robot_choice:\n",
+    "        print(\"You won !\")\n",
+    "        return 2\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"Draw!\")\n",
+    "        return 0\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def game_step():\n",
+    "    return combat(robot_play(),human_play())\n",
+    "    \n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
+    "score_robot,score_human,game=(0,0,0)\n",
     "\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
+    "while game<max_games and score_robot<number_games and score_human<number_games:\n",
+    "    result= game_step()\n",
+    "    if result==1:\n",
+    "        score_robot+=1\n",
+    "    elif result==2:\n",
+    "        score_human+=1\n",
+    "    game+=1   \n",
     "\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
+    "if score_robot<score_human:\n",
+    "    print(\"You won !\")\n",
+    "elif score_robot>score_human:\n",
+    "    print(\"Robot is the winner!\")\n",
+    "else:\n",
+    "    print(\"DRAW!\")\n",
     "  "
    ]
   },
@@ -93,59 +159,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number of games 5\n",
+      "Please choose one of the following: 'stone', 'paper', 'scissors','lizard' or 'spock' andjf\n",
+      "You've made a mistake, please choose within: 'stone', 'paper','scissors' ,'lizard' or 'spock' lizard\n",
+      "Robot choice spock\n",
+      "You won !\n",
+      "Please choose one of the following: 'stone', 'paper', 'scissors','lizard' or 'spock' spock\n",
+      "Robot choice stone\n",
+      "You won !\n",
+      "Please choose one of the following: 'stone', 'paper', 'scissors','lizard' or 'spock' paper\n",
+      "Robot choice stone\n",
+      "You won !\n",
+      "You won !\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
-    "\n",
+    "from random import choice\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
     "\n",
     "\n",
     "# Assign a list of 5 possible options.\n",
-    "\n",
+    "options=['stone', 'paper','scissors','lizard','spock']\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
-    "\n",
+    "max_games=int(input(\"Enter the number of games \"))\n",
+    "while max_games%2 ==0:\n",
+    "    max_games= int(input(\"The number of games have to be an odd number !! \"))\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
-    "\n",
+    "number_games=max_games//2+1\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def robot_play():\n",
+    "    return choice(options)\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
-    "\n",
+    "def human_play():\n",
+    "    a=input(\"Please choose one of the following: 'stone', 'paper', 'scissors','lizard' or 'spock' \")\n",
+    "    while a not in options:\n",
+    "        a=input(\"You've made a mistake, please choose within: 'stone', 'paper','scissors' ,'lizard' or 'spock' \")\n",
+    "    return a \n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
     " \n",
-    "\n",
+    "def combat (robot_choice,human_choice):\n",
+    "    win_play={'paper': ('stone','spock'), 'stone':('scissors','lizard'),'scissors':('paper','lizard'), \n",
+    "              'lizard': ('paper', 'spock') ,'spock': ('stone','scissors')}\n",
+    "    print(\"Robot choice\", robot_choice)\n",
+    "    if human_choice in win_play[robot_choice]:\n",
+    "        print(\"Robot won !\")\n",
+    "        return 1   \n",
+    "    \n",
+    "    elif robot_choice in win_play[human_choice]:\n",
+    "        print(\"You won !\")\n",
+    "        return 2\n",
+    "    \n",
+    "    else:\n",
+    "        print(\"Draw!\")\n",
+    "        return 0\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
-    "\n",
+    "def game_step():\n",
+    "    return combat(robot_play(),human_play())\n",
+    "    \n",
     "    \n",
     "# Create two variables that accumulate the wins of each participant\n",
-    "\n",
+    "score_robot,score_human,game=(0,0,0)\n",
+    "    \n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
-    "    \n",
+    "while game<max_games and score_robot<number_games and score_human<number_games:\n",
+    "    result= game_step()\n",
+    "    if result==1:\n",
+    "        score_robot+=1\n",
+    "    elif result==2:\n",
+    "        score_human+=1\n",
+    "    game+=1   \n",
+    "\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "\n"
+    "if score_robot<score_human:\n",
+    "    print(\"You won !\", score_human, '-',score_robot)\n",
+    "elif score_robot>score_human:\n",
+    "    print(\"Robot is the winner!\", score_human, '-',score_robot)\n",
+    "else:\n",
+    "    print(\"DRAW!\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -171,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
