--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,53 +32,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# variables\n",
-    "\n"
+    "from math import *\n",
+    "#Let's try with an example\n",
+    "stops = [(20, 3), (13, 6), (5, 7), (8, 11)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of stops is 4\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Calculate the number of stops.\n",
-    "\n"
+    "print(\"number of stops is\",len(stops))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 24, 22, 19]\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
-    "\n"
+    "number_passengers=[]\n",
+    "for i in range(len(stops)):\n",
+    "    if i==0:\n",
+    "        \n",
+    "        a=stops[0][0]-stops[0][1]\n",
+    "        number_passengers.append(a)\n",
+    "    \n",
+    "    else:\n",
+    "        b=number_passengers[i-1]+ stops[i][0]-stops[i][1]\n",
+    "        number_passengers.append(b)\n",
+    "\n",
+    "\n",
+    "print(number_passengers)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the maximum occupation of the bus.\n",
+    "max_occupation=max(number_passengers)\n",
+    "print(max_occupation)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.5\n",
+      "[12.25, 12.25, 2.25, 2.25]\n",
+      "2.692582403567252\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "average_occupation=sum(number_passengers)/len(number_passengers)\n",
+    "print(average_occupation)\n",
+    "#Standard deviation\n",
+    "list2=[]\n",
+    "for i in range(len(number_passengers)):\n",
+    "    b=(number_passengers[i]-average_occupation)**2\n",
+    "    list2.append(b)\n",
+    "\n",
+    "print(list2)\n",
+    "standard_deviation= sqrt(sum(list2)/len(list2))\n",
+    "print(standard_deviation)\n"
    ]
   },
   {
@@ -105,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
