--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,31 +45,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "gan,saru=(0,0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "for i in range(len(gandalf)):\n",
+    "    if gandalf[i] < saruman[i]:\n",
+    "        saru = saru+1        \n",
+    "    elif gandalf[i] > saruman[i]:\n",
+    "        gan = gan+1\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf is the winner !\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "\n",
+    "if saru < gan:\n",
+    "    print(\"Gandalf is the winner !\")\n",
+    "elif saru > gan:\n",
+    "    print(\"Saruman is the winner !\")\n",
+    "else:\n",
+    "    print(\"DRAW!!\")"
    ]
   },
   {
@@ -116,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,51 +160,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n"
+    "\n",
+    "gandalf_power=[]\n",
+    "saruman_power=[]\n",
+    "\n",
+    "for i in range(len(gandalf)):\n",
+    "    gandalf_power.append(POWER[gandalf[i]])\n",
+    "    saruman_power.append(POWER[saruman[i]])\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf is the winner !\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
     "\n",
     "# Execution of spell clashes\n",
     "\n",
+    "gan,saru=(0,0)\n",
     "\n",
+    "while saru<3 and gan<3:\n",
+    "    for i in range(len(gandalf_power)):\n",
+    "        if gandalf_power[i] < saruman_power[i]:\n",
+    "            saru = saru+1        \n",
+    "        elif gandalf_power[i] > saruman_power[i]:\n",
+    "            gan = gan+1\n",
+    "        \n",
     "\n",
     "# check for 3 wins in a row\n",
     "\n",
     "\n",
-    "# check the winner\n"
+    "# check the winner\n",
+    "if saru < gan:\n",
+    "    print(\"Gandalf is the winner !\")\n",
+    "elif saru > gan:\n",
+    "    print(\"Saruman is the winner !\")\n",
+    "else:\n",
+    "    print(\"DRAW!!\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.0\n",
+      "30.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "average_gandalf_power=sum(gandalf_power)/len(gandalf_power)\n",
+    "print(average_gandalf_power)\n",
+    " \n",
+    "average_saruman_power=sum(saruman_power)/len(saruman_power)\n",
+    "print(average_saruman_power)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16.881943016134134 15.56438241627338\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "from math import sqrt\n",
+    "list_gandalf=[]\n",
+    "list_saruman=[]\n",
+    "for i in range(len(gandalf_power)):\n",
+    "    b=(gandalf_power[i]-average_gandalf_power)**2\n",
+    "    c=(saruman_power[i]-average_saruman_power)**2\n",
+    "    list_gandalf.append(b)\n",
+    "    list_saruman.append(c)\n",
+    "\n",
+    "standard_deviation_gandalf= sqrt(sum(list_gandalf)/len(list_gandalf))\n",
+    "standard_deviation_saruman= sqrt(sum(list_saruman)/len(list_saruman))\n",
+    "print(standard_deviation_gandalf, standard_deviation_saruman)\n",
+    "    "
    ]
   },
   {
